Make it work on 1.21.4